@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-        <title>網路電台</title>
+        <title>Taiwan Radio Tuner</title>
         <link rel="stylesheet" type="text/css" href="player.css"/>
         <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
         <script type="text/javascript" src="jquery.cookie.js"></script>
@@ -12,7 +12,7 @@
     <body>
         <div id='panel'>
             <fieldset id='tuner'>
-                <legend>網路電台</legend>
+                <legend>Taiwan Radio Tuner</legend>
                 <select id="category"></select>
                 <select id="channel"></select>
                 <input id='control' type='button' value='▶'/>
